--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,7 @@ body {
 	font-family: 'NotoSansKR', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
 		'Droid Sans', 'Helvetica Neue', sans-serif;
 }
+
+.App {
+	background-color: #f7f8fa;
+}
